Fixed collapsed menu to close on click

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,7 +137,7 @@ favorites .active {
     margin-top: 20%;
     box-shadow: 0 1px 0 #cfcfcf;
     -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
+    -webkit-animation-duration: 0.6s;
     animation-name: animatetop;
     animation-duration: 0.6s
 }
